<?xml version="1.0"?>
<package format="2">
  <name>map_mux</name>
  <version>1.0.0</version>
  <description>A map multiplexer to switch between maps</description>

  <author>Brian Gerkey, Tony Pratkanis</author>
  <author>contradict@gmail.com</author>
  <author>Kai Wen Lum</author>
  <maintainer email="lkw303@gmail.com">Kai Wen</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>bullet</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sdl</depend>
  <depend>sdl-image</depend>
  <depend>tf2</depend>
  <depend>yaml-cpp</depend>

  <!-- for message generation -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
